# oamk-viikkotehtavat

./: .gitignore
viikkotehtava1/: CMakeLists.txt  main.cpp
viikkotehtava2/: CMakeLists.txt  game.cpp  game.h  main.cpp
viikkotehtava3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikkotehtava4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
viikkotehtava5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
viikkotehtava6/: CMakeLists.txt  main.cpp  student.cpp  student.h
viikkotehtava7/tehtava1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
viikkotehtava7/tehtava2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
viikkotehtava8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
